[Material][Mac] Fix text color in incognito omnibox

BUG=617766

Review-Url: https://codereview.chromium.org/2056093002
Cr-Commit-Position: refs/heads/master@{#399585}

Former-commit-id: 85502edfd5f031d56e28366f59b395b53d397cdb